# graiax-fastapi

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  test.py
.github/workflows/: release.yml  test.yml
src/graiax/fastapi/: __init__.py  interface.py  service.py
src/graiax/fastapi/saya/: behaviour.py  route.py  schema.py
src/tests/: schema.py  test.py
tests/: schema.py  test.py
