[project]
name = "graiax-fastapi"
version = "0.4.0"
description = "FastAPI launcher for GraiaCommunity."
authors = [
    { name = "BlueGlassBlock", email = "blueglassblock@outlook.com" },
    { name = "Red_lnn", email = "w731347477@gmail.com" },
]
dependencies = [
    "fastapi>=0.101.0",
    "graia-amnesia>=0.8.2",
    "graia-saya>=0.0.18",
    "launart>=0.8.1",
]
requires-python = ">=3.9"
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "Typing :: Typed",
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
repository = "https://github.com/GraiaCommunity/graiax-fastapi"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool]
[tool.pdm]
includes = ["src/graiax"]

[tool.pdm.dev-dependencies]
dev = [
    "black>=23.7.0",
    "graia-broadcast>=0.23.2",
    "httpx>=0.24.1",
    "isort>=5.12.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.1",
    "websockets>=11.0.3",
    "creart>=0.3.0",
]

[tool.black]
line-length = 120
target-version = ["py39", "py310", "py311"]

[tool.ruff]
line-length = 120
target-version = "py39"
select = [
    # https://beta.ruff.rs/docs/rules
    "E",  # pycodestyle
    "F",  # pyflakes
    "UP", # pyupgrade
    "I",  # isort
    # "D",  # pydocstyle
    "ASYNC", # flake8-async
]
exclude = [".git", ".venv", "__pypackages__", "dist"]
ignore = ["F401"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["./tests"]
python_files = ["test.py"]
